<resources>
    <string name="app_name">MobileApp</string>
    <string name="account_ID">ID</string>
    <string name="account_PW">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="basic_info">계정 기본 정보</string>
    <string name="user_name_hint">이름</string>
    <string name="id_hint">아이디</string>
    <string name="password_hint">비밀번호(6자 이상)</string>
    <string name="confirm_password_hint">비밀번호 확인</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="spinner_list">

        <item>2018년 1월 </item>
        <item>2018년 2월</item>
        <item>2018년 3월</item>
        <item>2018년 4월</item>
        <item>2018년 5월</item>

    </string-array>


</resources>
