<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.LoginActivity">

    <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
        android:id="@+id/account_ID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/account_ID"
        android:layout_marginTop="151dp"/>
    
    <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
        android:id="@+id/account_PW"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/account_PW"
        android:layout_below="@+id/account_ID"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/account_PW"
        android:layout_toStartOf="@+id/signupBtn" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_alignTop="@+id/loginBtn"
        android:layout_alignEnd="@+id/account_PW" />

</RelativeLayout>