<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_info"
                    android:textColor="@color/global_color"
                    android:textSize="18dp" />

                <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
                    android:id="@+id/edt_signup_name"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/user_name_hint"
                    />

                <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
                    android:id="@+id/edt_signup_id"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/id_hint" />

                <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
                    android:id="@+id/edt_signup_password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <com.midas2018mobile5.mobileapp.main.widgets.ClearEditText
                    android:id="@+id/edt_signup_confirm_password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/global_color"
                    android:text="회원가입"
                    android:textColor="@color/button_text_color" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>